--- a/index.css
+++ b/index.css
@@ -16,3 +16,11 @@ ul a.active {
     background-color: #6b040b;
     color: white;
 }
+body{
+        background-color: beige;
+        font-family: "Montserrat", sans-serif;
+}
+h1{
+        color: rgb(127, 6, 30);
+        font-family: "Kanit", sans-serif;
+}
